src/visualization-grafana/overlays/staging/allow-mount-data.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visualization-grafana
spec:
  template:
    spec:
      containers:
        - name: visualization-grafana
          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: visualization-grafana
