src/visualization-grafana/overlays/staging/change-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visualization-grafana
spec:
  template:
    spec:
      containers:
        - name: visualization-grafana
      restartPolicy: Always
