src/visualization-grafana/overlays/staging/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: visualization-grafana
spec:
  entryPoints: 
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/grafana`)
      services:
        - kind: Service
          name: visualization-grafana
          namespace: staging-visualization
          port: 3000
          strategy: RoundRobin
